<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/mainLogin"
    android:background="@drawable/back"
    android:layout_height="match_parent"
>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="#b3819990"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".screens.activities.LoginActivity">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />
        <TextView
            android:textColor="#31D896"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/white"
            android:text="Welcome Back "
            android:textStyle="bold"
            android:textSize="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="#000"
            android:text="Sign in to continue"
            android:textStyle="italic|bold"
            android:textSize="@dimen/_15sdp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/roundedt"
                    android:layout_height="@dimen/_40sdp">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                         android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/_5sdp"
                        android:hint="@string/prompt_email"
                        android:background="@android:color/transparent"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:orientation="horizontal"
                    android:background="@drawable/roundedt"
                    android:visibility="visible"
                    tools:context=".screens.fragments.RegistrationFragment">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <EditText
                            android:background="@android:color/transparent"
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="6"
                            android:layout_gravity="center"
                            android:paddingStart="@dimen/_5sdp"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <CheckBox
                        android:id="@+id/cbShowPwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginEnd="18dp"
                        android:layout_marginTop="10dp"
                        android:button="@drawable/checkbox"
                        android:gravity="center"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="18dp" />
                </RelativeLayout>
                <LinearLayout
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:visibility="gone"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="@dimen/_5sdp"
                        android:textColor="@color/textColor"
                        android:text="Forget Password"
                        android:textStyle="italic|bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>




                <Button
                    android:background="@color/colorPrimaryDark"
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <LinearLayout
                    android:id="@+id/SignUp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView

                        android:textColor="#3d3c3c"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="New User?  "
                        android:textStyle="italic|bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                         android:text="Sign up "
                        android:textStyle="italic|bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>



            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
